--- a/src/sass/base/index.scss
+++ b/src/sass/base/index.scss
@@ -3,5 +3,21 @@ body {
   font-optical-sizing: auto;
   font-size: 18px;
   font-weight: 400;
+  margin: 0;
+  color: hsl(229, 8%, 60%);
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: hsl(229, 31%, 21%);
+  margin: 0;
 }
