--- a/src/sass/components/description.scss
+++ b/src/sass/components/description.scss
@@ -37,12 +37,57 @@
       }
     }
   }
+  .description-div--absolute {
+    position: absolute;
+    left: 0;
+    .absolute-img {
+      position: absolute;
+      left: 170px;
+      z-index: 40;
+      transform: translate(0, 10%);
+    }
+    .blue-div-left {
+      position: relative;
+      z-index: 30;
+      transform: translate(0, 40%);
+      width: 600px;
+      height: 325px;
+      background-color: $light-blue;
+      border-radius: 0 70rem 70rem 0;
+    }
+  }
 }
-@media (max-width: 1180px) {
+@media (max-width: 1250px) {
   .description-section {
+    .description-div--absolute {
+      // margin-top: 10rem;
+      .absolute-img {
+        width: 450px;
+        left: 55px;
+        transform: translate(0, 40%);
+      }
+      .blue-div-left {
+        width: 400px;
+        height: 300px;
+        transform: translate(0, 50%);
+        background-color: $light-blue;
+        border-radius: 0 70rem 70rem 0;
+      }
+    }
+  }
+}
+
+@media (max-width: 940px) {
+  .description-section {
+    .description-div--absolute {
+      // margin-top: 10rem;
+      .absolute-img {
+        width: 90%;
+      }
+    }
     .description-container {
       margin-top: 30rem;
-      margin-bottom: 20rem;
+
       .description-text {
         max-width: 100%;
         margin-left: 0;
@@ -61,40 +106,31 @@
   }
 }
 
-.description-image {
-  position: absolute;
-  left: 0;
-  transform: translate(30%, 0%);
-  margin-top: 5rem;
-  z-index: 50;
-}
-@media (max-width: 1180px) {
-  .description-image {
-    transform: translate(0, 10%);
-    margin: 0 1.8rem 0 1.8rem;
-    img {
-      max-width: 100%;
+@media (max-width: 540px) {
+  .description-section {
+    .description-container {
+      margin-top: 20rem;
+      .description-text {
+        .description-h {
+          text-align: center;
+          font-size: 1.1em;
+        }
+        .description-p {
+          font-size: 0.875em;
+        }
+      }
     }
-  }
-}
-
-.blue-div--left {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-top: 5rem;
-  transform: translate(0, 345%);
-  background-color: $light-blue;
-  width: 650px;
-  height: 300px;
-  border-radius: 0 70rem 70rem 0;
-  z-index: 10;
-}
-@media (max-width: 1180px) {
-  .blue-div--left {
-    position: absolute;
-    width: 400px;
-    height: 200px;
-    transform: translate(0, 580%);
+    .description-div--absolute {
+      .absolute-img {
+        transform: translate(0, 20%);
+        width: 100%;
+        left: 25px;
+      }
+      .blue-div-left {
+        transform: translate(0, 30%);
+        width: 300px;
+        height: 200px;
+      }
+    }
   }
 }
