--- a/src/sass/components/faq.scss
+++ b/src/sass/components/faq.scss
@@ -24,11 +24,11 @@
       list-style: none;
       font-size: 1.5rem;
       flex-wrap: wrap;
-      .faq-list--item {
+      .faq-list-item {
         display: flex;
         flex-direction: column;
         margin: 1.5rem 1rem 1.5rem 0;
-        .faq-list--item--title {
+        .faq-list-item-title {
           display: flex;
           width: 100%;
           .faq-list-h {
@@ -39,12 +39,12 @@
             font-size: 1.25rem;
           }
 
-          .faq-list--item--arrow {
+          .faq-list-item-arrow {
             width: 50%;
             text-align: right;
           }
 
-          .faq-list--item--arrow--active {
+          .faq-list-item-arrow--active {
             width: 50%;
             text-align: right;
             svg {
@@ -57,13 +57,13 @@
           font-size: 1.15rem;
         }
       }
-      .faq-list--item:hover {
+      .faq-list-item:hover {
         .faq-list-h {
           @include text--hover;
           color: $light-red;
         }
         cursor: pointer;
-        .faq-list--item--arrow {
+        .faq-list-item-arrow {
           svg {
             color: $light-red;
           }
@@ -75,7 +75,7 @@
       width: 7.2rem;
       height: 3rem;
       padding: 0.4rem 0.7rem;
-      margin-bottom: 5rem;
+      margin: 1rem 0 1rem 0;
     }
     .faq-info-btn:hover {
       @include blue-btn--hover;
@@ -83,7 +83,7 @@
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 940px) {
   .faq-section {
     .faq-container {
       width: 100%;
