--- a/src/sass/components/featuresButtons.scss
+++ b/src/sass/components/featuresButtons.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  margin-top: 2rem;
   hr {
     width: 100%;
     position: relative;
@@ -30,7 +31,7 @@
   }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 768px) {
   .buttons-container {
     flex-direction: column;
     align-items: center;
