--- a/src/sass/components/popup.scss
+++ b/src/sass/components/popup.scss
@@ -1,7 +1,6 @@
 @import "../variables.scss";
 
 .popup-section {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -13,19 +12,19 @@
     background-color: white;
     border-radius: $b-radius-sm;
     position: fixed;
-    width: 90%;
-    height: 90%;
+    width: 95%;
+    height: 95%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding-top: 0.3rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
   }
   .close-icon {
     position: absolute;
-    top: 1rem;
-    right: 1rem;
+    top: 2rem;
+    right: 2rem;
     cursor: pointer;
   }
 }
