--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -20,6 +20,7 @@ footer {
       .nav-list {
         display: flex;
         width: 50%;
+        font-size: 0.875rem;
         li {
           margin: 0 1.1em 0 1.1em;
         }
