--- a/src/sass/components/popup.scss
+++ b/src/sass/components/popup.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9999;
   .popup-container {
@@ -25,6 +25,7 @@
     position: absolute;
     top: 2rem;
     right: 2rem;
+    z-index: 999;
     cursor: pointer;
   }
 }
