--- a/src/sass/components/featuresButtons.scss
+++ b/src/sass/components/featuresButtons.scss
@@ -5,29 +5,29 @@
   justify-content: center;
   width: 100%;
   margin-top: 2rem;
-  hr {
-    width: 100%;
-    position: relative;
-    height: 0.1px;
-    background-color: $light-gray;
-    top: -2px;
-    margin: 0;
+  .mobile-first-line {
+    display: none;
   }
-  .feature-btn {
-    border: none;
-    border-bottom: 0.1px solid $light-gray;
-    background-color: white;
-    color: $dark-blue;
-    width: 240px;
-    height: 3em;
-    font-size: 1.15rem;
-  }
-  .feature-btn:hover {
-    @include text--hover;
-  }
-  .feature-btn--focused {
-    border-bottom: 3px solid $light-red;
-    z-index: 20;
+  .btn-fake-border--bottom {
+    display: flex;
+    justify-content: center;
+    border-bottom: 0.1px solid;
+    .feature-btn {
+      border: none;
+      border-bottom: 0px solid $light-gray;
+      background-color: white;
+      color: $dark-blue;
+      width: 240px;
+      height: 3em;
+      font-size: 1.15rem;
+    }
+    .feature-btn:hover {
+      @include text--hover;
+    }
+    .feature-btn--focused {
+      border-bottom: 3px solid $light-red;
+      z-index: 20;
+    }
   }
 }
 
@@ -35,14 +35,15 @@
   .buttons-container {
     flex-direction: column;
     align-items: center;
+    .mobile-first-line {
+      display: flex;
+      width: 100%;
+      border: 0.1px solid $light-gray;
+    }
     .btn-container {
       width: 100%;
       display: flex;
       flex-direction: column;
-    }
-    hr {
-      width: 80%;
-      margin: 0;
     }
     .feature-btn {
       width: 100%;
