--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -56,6 +56,7 @@ footer {
         .nav-list {
           width: 100%;
           padding: 0;
+          font-size: 1.125rem;
           li {
             text-align: center;
             margin-top: 1.3rem;
