--- a/src/sass/components/faq.scss
+++ b/src/sass/components/faq.scss
@@ -35,7 +35,9 @@
             display: flex;
             align-items: center;
             width: 50%;
+            text-wrap: nowrap;
             margin: 0;
+            font-weight: 400;
             font-size: 1.25rem;
           }
 
@@ -95,6 +97,13 @@
         width: 100%;
         margin: 0;
         padding: 0;
+        .faq-list-item {
+          .faq-list-item-title {
+            .faq-list-h {
+              font-size: 0.8rem;
+            }
+          }
+        }
         li {
           flex-direction: row;
           align-items: center;
